@@ -1,3 +1,7 @@
+2014-12-17 Marco Giammarini <m.giammarini@warcomeb.it>
+
+    * Aggiunto il dialog per la gestione di piu' file di configurazione. WiP!
+
 2014-12-15 Marco Giammarini <m.giammarini@warcomeb.it>
 
     * Implementata la lettura dei dati del database dal file ini.
